[gd_scene load_steps=22 format=3 uid="uid://db2h3t17k37pe"]

[ext_resource type="Script" uid="uid://cp8ddmcbhue8d" path="res://Scripts/World.gd" id="1_yrgup"]
[ext_resource type="PackedScene" uid="uid://clwvialu5iyb2" path="res://Assets/map/new city.glb" id="2_gjpho"]
[ext_resource type="PackedScene" uid="uid://bir6o1slvvhkr" path="res://UsingAsset/free city/freeCity.glb" id="2_p70al"]
[ext_resource type="Texture2D" uid="uid://dhb67txqh0kvj" path="res://Models/sky/sky23123.jpg" id="3_kwl8l"]
[ext_resource type="PackedScene" uid="uid://b4u8tp0k5hwj5" path="res://UsingAsset/buildings and houses/buildings/asian buildings/AureedBuilding.tscn" id="6_45d1s"]
[ext_resource type="PackedScene" uid="uid://boql77ksygj1i" path="res://UsingAsset/buildings and houses/buildings/front building/BuildBlend.glb" id="7_q2d71"]
[ext_resource type="PackedScene" uid="uid://dkubc8tfkl1xn" path="res://UsingAsset/buildings and houses/houses/house 1.tscn" id="8_q2d71"]
[ext_resource type="PackedScene" uid="uid://c8xqp34mjosvw" path="res://Old_Main.tscn" id="9_kn06e"]
[ext_resource type="PackedScene" uid="uid://cxxciaksw5f4k" path="res://UsingAsset/buildings and houses/houses/house 2.tscn" id="10_7yo87"]
[ext_resource type="PackedScene" uid="uid://cltbefj8tviju" path="res://UsingAsset/buildings and houses/buildings/appartment 2/Townhouse.tscn" id="11_7yo87"]
[ext_resource type="PackedScene" uid="uid://cxk4ubacvfi5g" path="res://UsingAsset/buildings and houses/buildings/cafe/Generate_an_high_qual_0311050100_texture.tscn" id="12_ti1bm"]
[ext_resource type="PackedScene" uid="uid://c53n0qfkfil1q" path="res://UsingAsset/buildings and houses/buildings/town houses/town.tscn" id="13_8l3nt"]
[ext_resource type="PackedScene" uid="uid://cicx741dlo7ib" path="res://Models/make_a_3_floor_studen_0202232129_texture.blend" id="14_kwl8l"]
[ext_resource type="PackedScene" uid="uid://bwffmvxshuc17" path="res://Assets/map/SMC support 1.tscn" id="15_kwl8l"]
[ext_resource type="PackedScene" uid="uid://5iurrb07epis" path="res://Scenes/Player.tscn" id="31_jumwc"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_6lu03"]
panorama = ExtResource("3_kwl8l")

[sub_resource type="Sky" id="Sky_3auab"]
sky_material = SubResource("PanoramaSkyMaterial_6lu03")

[sub_resource type="Environment" id="Environment_rlw24"]
background_mode = 2
sky = SubResource("Sky_3auab")
fog_light_color = Color(0, 0.63747, 0.572864, 1)
fog_light_energy = 0.06
fog_sun_scatter = 0.03
volumetric_fog_enabled = true
volumetric_fog_density = 0.0574
volumetric_fog_albedo = Color(1, 0.0666667, 0.0941176, 1)
volumetric_fog_emission = Color(0.345098, 0.2, 0.2, 1)

[sub_resource type="NavigationMesh" id="NavigationMesh_o2f1v"]
region_min_size = 80.0
filter_ledge_spans = true

[sub_resource type="BoxShape3D" id="BoxShape3D_5nsto"]
size = Vector3(50.4445, 1, 50.4049)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yfips"]
albedo_color = Color(1, 0.419608, 0.262745, 1)
emission_enabled = true
emission = Color(1, 0, 0.211765, 1)
emission_energy_multiplier = 4.0

[node name="World" type="Node3D"]
script = ExtResource("1_yrgup")

[node name="Map" parent="." instance=ExtResource("2_p70al")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Map"]
transform = Transform3D(-0.603208, -0.409592, 0.684379, 0, 0.858065, 0.513541, -0.797584, 0.309772, -0.517592, 0, 0, 0)
light_color = Color(0.756863, 0.796078, 1, 1)
light_energy = 0.6
light_indirect_energy = 0.8
light_volumetric_fog_energy = 0.5
light_angular_distance = 5.0
shadow_enabled = true
sky_mode = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="Map"]
environment = SubResource("Environment_rlw24")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Map"]
navigation_mesh = SubResource("NavigationMesh_o2f1v")

[node name="Player" parent="Map/NavigationRegion3D" instance=ExtResource("31_jumwc")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -233.237, 2.29769, -196.22)

[node name="StaticBody3D" type="StaticBody3D" parent="Map/NavigationRegion3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/NavigationRegion3D/StaticBody3D"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0.800186, -4.7037, -1.22216)
shape = SubResource("BoxShape3D_5nsto")

[node name="Moon" type="CSGSphere3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 937, 717, -683)
visible = false
material_override = SubResource("StandardMaterial3D_yfips")
cast_shadow = 0
radius = 100.0
radial_segments = 100
rings = 12

[node name="Spawns" type="Node3D" parent="Map"]

[node name="Spawn1" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -1)

[node name="Spawn2" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -5)

[node name="Spawn3" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -9)

[node name="Spawn4" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -13)

[node name="Spawn24" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -1)

[node name="Spawn25" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -5)

[node name="Spawn26" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -9)

[node name="Spawn27" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -13)

[node name="Spawn5" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7, 0, -1)

[node name="Spawn9" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 36)

[node name="Spawn10" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 36)

[node name="Spawn11" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 36)

[node name="Spawn12" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 36)

[node name="Spawn13" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 36)

[node name="Spawn14" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 31)

[node name="Spawn15" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 31)

[node name="Spawn16" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 31)

[node name="Spawn17" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 31)

[node name="Spawn18" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 31)

[node name="Spawn19" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 25)

[node name="Spawn20" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 25)

[node name="Spawn21" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25)

[node name="Spawn22" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 25)

[node name="Spawn23" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 25)

[node name="Spawn6" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7, 0, -5)

[node name="Spawn7" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7, 0, -9)

[node name="Spawn8" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7, 0, -13)

[node name="Spawn28" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.7, 0, -1)

[node name="Spawn29" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.7, 0, -5)

[node name="Spawn30" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.7, 0, -9)

[node name="Spawn31" type="Node3D" parent="Map/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.7, 0, -13)

[node name="city Map with all" parent="Map" instance=ExtResource("2_gjpho")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.11036, -0.908844, -2.51712)
visible = false

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="HitRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 24.0
offset_right = 4214.0
offset_bottom = 2412.0
mouse_filter = 2
color = Color(0.803922, 0.0313726, 0.117647, 0.266667)

[node name="ZombieSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="AureedBuilding" parent="." instance=ExtResource("6_45d1s")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 120.482, -0.384558, 142.166)

[node name="BuildBlend" parent="." instance=ExtResource("7_q2d71")]
transform = Transform3D(-6.55671e-08, 0, 1.5, 0, 1.5, 0, -1.5, 0, -6.55671e-08, -62.8162, 0.629426, -167.087)

[node name="house 1" parent="." instance=ExtResource("8_q2d71")]
transform = Transform3D(-20, 0, -3.01992e-06, 0, 20, 0, 3.01992e-06, 0, -20, -123.633, 11.8377, 86.5082)

[node name="house 3" parent="." instance=ExtResource("8_q2d71")]
transform = Transform3D(-0.0157055, 0, -20, 0, 20, 0, 20, 0, -0.0157055, 184.529, 12.2471, 35.2808)

[node name="house 4" parent="." instance=ExtResource("8_q2d71")]
transform = Transform3D(19.9988, 0, -0.220952, 0, 20, 0, 0.220952, 0, 19.9988, 26.6585, 12.6817, 127.606)

[node name="Old_Main" parent="." instance=ExtResource("9_kn06e")]
transform = Transform3D(-0.287451, 0, -29.9986, 0, 30, 0, 29.9986, 0, -0.287451, 94.1181, 17.4532, -16.8768)

[node name="house 2" parent="." instance=ExtResource("10_7yo87")]
transform = Transform3D(0.482365, 0, -19.9942, 0, 20, 0, 19.9942, 0, 0.482365, 186.435, 12.677, -114.4)

[node name="Townhouse" parent="." instance=ExtResource("11_7yo87")]
transform = Transform3D(-0.00178039, 0, 3, 0, 3, 0, -3, 0, -0.00178039, 74.2612, 0.306805, 196.05)

[node name="Townhouse2" parent="Townhouse" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, 5.82077e-11, 0, 1, 0, -5.82077e-11, 0, 1, 0.00530243, 0, -8.94078)

[node name="Townhouse3" parent="Townhouse/Townhouse2" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, 5.82077e-11, 0, 1, 0, -5.82077e-11, 0, 1, 0.00481415, 0, -8.10701)

[node name="Townhouse4" parent="Townhouse/Townhouse2/Townhouse3" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, 1.74623e-10, 0, 1, 0, -1.74623e-10, 0, 1, 0.00498199, 0, -8.38963)

[node name="Townhouse5" parent="Townhouse/Townhouse2/Townhouse3/Townhouse4" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, -5.82077e-11, 0, 1, 0, 5.82077e-11, 0, 1, 0.00520325, 0, -8.78413)

[node name="Townhouse2" parent="." instance=ExtResource("11_7yo87")]
transform = Transform3D(-1.31134e-07, 0, -3, 0, 3, 0, 3, 0, -1.31134e-07, -32.8116, 0.306805, 236.593)

[node name="Townhouse2" parent="Townhouse2" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00382996, 0, -6.78977)

[node name="Townhouse3" parent="Townhouse2/Townhouse2" instance=ExtResource("11_7yo87")]
transform = Transform3D(0.999359, 0.0358065, 2.80345e-11, -0.0358065, 0.999359, 1.56515e-09, 2.80309e-11, -1.56515e-09, 1, 0.00378418, 0, -7.31304)

[node name="Townhouse4" parent="Townhouse2/Townhouse2/Townhouse3" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 0, 5.81935e-11, 7.45058e-09, 1, -5.55112e-16, -5.82077e-11, 0, 1, 0.00365448, -4.76837e-07, -7.96574)

[node name="Townhouse5" parent="Townhouse2/Townhouse2/Townhouse3/Townhouse4" instance=ExtResource("11_7yo87")]
transform = Transform3D(1, 3.72529e-09, -5.82041e-11, 0, 1, 1.11022e-16, 5.8197e-11, 0, 1, 0.00370789, 2.38419e-07, -8.03299)

[node name="cafe 1" parent="." instance=ExtResource("12_ti1bm")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 24.5152, 5.3474, -118.212)

[node name="cafe 2" parent="." instance=ExtResource("12_ti1bm")]
transform = Transform3D(-9.99141, 0, -0.414397, 0, 10, 0, 0.414397, 0, -9.99141, -63.1785, 5.3474, 201.259)

[node name="town house" parent="." instance=ExtResource("13_8l3nt")]
transform = Transform3D(40, 0, 0, 0, 40, 0, 0, 0, 40, -60.9498, 14.5403, 129.576)

[node name="town house2" parent="." instance=ExtResource("13_8l3nt")]
transform = Transform3D(40, 0, 0, 0, 40, 0, 0, 0, 40, -60.9498, 14.5403, 129.576)

[node name="town house3" parent="." instance=ExtResource("13_8l3nt")]
transform = Transform3D(-0.302986, 0, -39.9989, 0, 40, 0, 39.9989, 0, -0.302986, 188.605, 14.5403, -38.6928)

[node name="make_a_3_floor_studen_0202232129_texture" parent="." instance=ExtResource("14_kwl8l")]
transform = Transform3D(-8.74228e-07, 0, 20, 0, 20, 0, -20, 0, -8.74228e-07, -126.24, 12.7611, -14.061)

[node name="make_a_3_floor_studen_0202232129_texture2" parent="." instance=ExtResource("14_kwl8l")]
transform = Transform3D(-8.74228e-07, 0, 20, 0, 20, 0, -20, 0, -8.74228e-07, -126.24, 12.7611, -53.8696)

[node name="SMC support 1" parent="." instance=ExtResource("15_kwl8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -53.0028, 17.8875, -186.831)

[node name="SMC support 2" parent="." instance=ExtResource("15_kwl8l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 84.3719, 17.8875, -186.831)

[connection signal="player_hit" from="Map/NavigationRegion3D/Player" to="." method="_on_player_player_hit"]
[connection signal="timeout" from="ZombieSpawnTimer" to="." method="_on_zombie_spawn_timer_timeout"]
